nullaway_error_21CBAC6C-F278-4BDF-9A99-8DA98875D468.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-beans/src/main/java/org/springframework/beans/factory/support/ConstructorResolver.java:817: error: [NullAway] dereferenced expression executable is @Nullable
		Class<?>[] paramTypes = executable.getParameterTypes();
		                                  ^
    (see http://t.uber.com/nullaway )
